# winio-template

./: Cargo.toml  README.md
.android/: key.keystore
.cargo/: config.toml
.github/workflows/: android.yaml  build.yaml  linux-glibc.yaml  macos.yaml  windows-10.yaml  windows-11.yaml
android/: key.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/: android.rs  lib.rs  main.rs  model.rs
